# python_dev_template

./: Dockerfile  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
stuff/: cli.py
