[metadata]
name = insert_name_here
version = 0.0.1
author = Irenaeus Chan
author_email = chani@wustl.edu
description = description_goes_here
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IrenaeusChan/python_dev_template
project_urls =
    Bug Tracker = https://github.com/IrenaeusChan/python_dev_template/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License
    Operating System :: OS Independent
license_files =
    LICENSE

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    click==8.0.3
    clint==0.5.1
    pandas==2.0.0
    pysam==0.21.0
    scipy==1.12.0
    numba==0.59.0

[options.package_data]
* = src/resources/*

#[options.packages.find]
#include = ccdg

[options.entry_points]
console_scripts =
    example_tool = src.cli:cli
